# webrender-embed

./: Cargo.toml  README.md
src/: component.rs  main.rs  state.rs  text.rs  widget.rs
