[package]
name = "webrender-embed"
version = "0.1.0"
authors = ["SpacialCircumstances <SpacialCircumstances@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrender = "0.61.0"
gleam = "0.6.17"
glutin = "0.24"