[package]
name = "webrender-embed"
version = "0.1.0"
authors = ["SpacialCircumstances <SpacialCircumstances@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrender = "0.61.0"
gleam = "0.6.17"
glutin = "0.23"
image = "0.23.2"
luminance = { git = "https://github.com/SpacialCircumstances/luminance-rs.git", branch = "feature/gl-state-resetting" }
luminance-derive = { git = "https://github.com/SpacialCircumstances/luminance-rs.git", branch = "feature/gl-state-resetting" }
luminance-windowing = { git = "https://github.com/SpacialCircumstances/luminance-rs.git", branch = "feature/gl-state-resetting" }
luminance-glutin = { git = "https://github.com/SpacialCircumstances/luminance-rs.git", branch = "feature/gl-state-resetting" }

[patch.crates-io]
luminance = { git = "https://github.com/SpacialCircumstances/luminance-rs.git", branch = "feature/gl-state-resetting" }
luminance-derive = { git = "https://github.com/SpacialCircumstances/luminance-rs.git", branch = "feature/gl-state-resetting" }
luminance-windowing = { git = "https://github.com/SpacialCircumstances/luminance-rs.git", branch = "feature/gl-state-resetting" }
luminance-glutin = { git = "https://github.com/SpacialCircumstances/luminance-rs.git", branch = "feature/gl-state-resetting" }
luminance-gl = { git = "https://github.com/SpacialCircumstances/luminance-rs.git", branch = "feature/gl-state-resetting" }
